Fix dark mode scrollbar color
Fix #6

--- a/src/themeable-dark.css
+++ b/src/themeable-dark.css
@@ -1,3 +1,7 @@
 @import "core/_import.css";
 @import "core/vars-palette-dark.css" screen;
 @import "core/vars-theme-dark.css" screen;
+
+:not(.mac-os) ::-webkit-scrollbar-thumb {
+    background-color: rgba(255, 255, 255, 0.1);
+}
